; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_signal-util.c_reset_signal_mask.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_signal-util.c_reset_signal_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reset_signal_mask() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i64 @sigemptyset(i32* %2)
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @errno, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %1, align 4
  br label %16

8:                                                ; preds = %0
  %9 = load i32, i32* @SIG_SETMASK, align 4
  %10 = call i64 @sigprocmask(i32 %9, i32* %2, i32* null)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i32, i32* @errno, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %1, align 4
  br label %16

15:                                               ; preds = %8
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %12, %5
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i64 @sigemptyset(i32*) #1

declare dso_local i64 @sigprocmask(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
